--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Prueba2Ejercicio2"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -22,7 +23,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Declaración de EventDetailActivity -->
         <activity android:name=".EventDetailActivity" />
+
+        <!-- Declaración de AddEventActivity -->
+        <activity android:name=".AddEventActivity" />
+
     </application>
 
 </manifest>
